<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">
    <!-- empty comment -->

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/myEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:minHeight="48dp"
        android:textSize="10dp" />

    <Button
        android:id="@+id/myButton"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:text="@string/button_message"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Temp goes here"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Min goes here"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Max goes here"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Humidity goes here"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:srcCompat="@drawable/app_icon"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="description goes here"
        android:visibility="invisible"/>
</LinearLayout>